# artax

./: .gitignore  CHANGELOG.md  README.md  TODO  artax.cabal  artax.nix  imgui.ini  shell.nix
shaders/: frag.glsl  vert.glsl
src/: Main.hs
src/Artax/: Camera.hs  Program.hs  Shader.hs  Texture.hs  Uniform.hs
