cabal-version:      3.0
name:               artax
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Joshua Morris
maintainer:         joshuajohnmorris@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable artax
    import:           warnings
    main-is:          Main.hs
    include-dirs:     shaders
    other-modules:    Artax.Shader,
                      Artax.Program
    build-depends:    base ^>=4.15.1.0,
                      sdl2,
                      gl
    hs-source-dirs:   src
    default-language: Haskell2010
